Git-Commit.command

--- a/aFileChooserExample/project.properties
+++ b/aFileChooserExample/project.properties
@@ -8,8 +8,9 @@
 # project structure.
 
 # Project target.
-target=android-19
-android.library.reference.1=../aFileChooser
+target=android-21
+android.library.reference.1=gen-external-apklibs/com.ipaulpro_afilechooser-library_2.4
+
 
 
 
