--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,9 @@
     <tag>main</tag>
     <url>scm:git:https://github.com/krischik/aFileChooser3</url>
   </scm>
+  <prerequisites>
+    <maven>3.2.3</maven>
+  </prerequisites>
 <!-- ––––––––––––––––––––––––––––––––––––––––––––––––––––––– }}}1 –––––– -->
 <!-- Distribution Management ––––––––––––––––––––––––––––––– {{{1 –––––– -->
   <distributionManagement>
@@ -97,7 +100,7 @@
       <dependency>
         <groupId>com.ipaulpro</groupId>
         <artifactId>afilechooser-library</artifactId>
-        <version>2.4</version>
+        <version>2.5</version>
         <scope>compile</scope>
         <type>apklib</type>
       </dependency>
@@ -249,7 +252,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>2.5.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
